--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -63,3 +63,56 @@ str(data)
 
 ```
 
+### Plotting the daily evolution of active cases
+
+``` r
+# Transform the data
+
+library(dplyr)
+library(tidyr)
+library(plotly)
+
+data_transformed <- data %>% group_by(date,data_type) %>% summarise(value=sum(value)) %>% 
+                    spread(data_type,value)
+
+head(data_transformed)
+# A tibble: 6 x 4
+# Groups:   date [6]
+  date       cases_new deaths_new recovered_new
+  <date>         <dbl>      <dbl>         <dbl>
+1 2020-03-02         1          0             0
+2 2020-03-08         1          0             0
+3 2020-03-09         3          0             0
+4 2020-03-10         1          0             0
+5 2020-03-11         1          0             0
+6 2020-03-12         6          0             0
+
+  data_transformed %>%
+  ungroup() %>% plot_ly(type = 'scatter', 
+                        mode = 'lines+markers')%>% 
+  add_trace(x = ~date, y = ~cumsum(cases_new), 
+            name = 'Confirmed cases',
+            marker = list(color = '#fec44f'),
+            line = list(color = '#fec44f'),
+            hoverinfo = "text",
+            text = ~paste(cases_new, "New confirmed cases\n",cumsum(cases_new), 'Total number of infected cases on',date)) %>%
+  add_trace(x = ~date, y = ~cumsum(deaths_new),
+            name = 'Deaths',
+            marker = list(color = 'red'),
+            line = list(color = 'red'),
+            hoverinfo = "text",
+            text = ~paste(deaths_new, "New deaths\n",cumsum(deaths_new), 'Total number of deaths on',date)) %>%
+  add_trace(x = ~date, y = ~cumsum(recovered_new), 
+            name = 'Recovered cases',
+            marker = list(color = 'green'),
+            line = list(color = 'green'),
+            hoverinfo = "text",
+            text = ~paste(recovered_new, "New recovered cases\n",cumsum(recovered_new), 'Total number of recovered cases on',date)) %>% 
+  layout(title = 'Tunisia - Daily Evolution of Active COVID19 Cases',
+         legend = list(x = 0.1, y = 0.9,
+                       font = list(family = "sans-serif", size = 14, color = "#000"), bgcolor = "",
+                       bordercolor = "#FFFFFF", borderwidth = 2),
+         xaxis = list(title = ""),
+         yaxis = list(side = 'left', title = 'Daily evolution', showgrid = TRUE, zeroline = TRUE))
+                        
+```
